[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "managed-ssh"
version = "0.1.1"
description = "User-friendly SSH manager CLI for saving destinations and using them with ssh, scp, and remote commands."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Steven Mendoza" }
]
keywords = [
  "ssh",
  "scp",
  "cli",
  "aliases",
  "devops",
  "sysadmin",
  "remote-access",
  "openssh"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities"
]

dependencies = [
  "click==8.2.1",
  "colorama==0.4.6",
  "inquirerpy==0.3.4",
  "pfzy==0.3.4",
  "prompt_toolkit==3.0.51",
  "PyYAML==6.0.2",
  "wcwidth==0.2.13"
]

[project.urls]
Homepage = "https://github.com/steven-mendoza-z/managed-ssh"
Documentation = "https://github.com/steven-mendoza-z/managed-ssh"
Source = "https://github.com/steven-mendoza-z/managed-ssh"
Issues = "https://github.com/steven-mendoza-z/managed-ssh/issues"

[project.scripts]
mssh = "mssh.cli:main"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*", "workspace*", "venv*"]
